<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="22sp"
        android:textColor="#000"
        android:text="@string/text_filter_options" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:id="@+id/kategori_dato"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginRight="5dp"
            android:textSize="16sp"
            android:clickable="true"
            style="@style/utfylling_tekstboks"
            android:hint="@string/utfylling_dato"
            android:gravity="center"
            android:focusable="true" />


        <Spinner
            android:id="@+id/kategori_spinner"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_height="42dp"
            android:spinnerMode="dropdown"
            style="@style/utfylling_tekstboks"
            android:entries="@array/Kategorier" />
    </LinearLayout>
    <EditText
        android:id="@+id/kategori_byNavn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Skriv inn bynavn"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        style="@style/utfylling_tekstboks" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fjern"
            android:textSize="16sp"
            android:layout_marginEnd="30dp" />
        <Button
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Søk"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>