<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ufylling_velg_bilde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/MineEvent_utfylling_bilde"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_baseline_image_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/nyttEventKameraKnapp"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:layout_marginLeft="100dp"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_camera_alt_24" />
            <ImageButton
                android:id="@+id/button_gallery"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginRight="100dp"
                android:layout_weight="0.5"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_collections_24" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/utfyllingsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ufylling_velg_bilde"
        android:layout_margin="@dimen/page_margin"

        android:orientation="vertical">


        <EditText
            android:id="@+id/event_utfyll_tittel"
            style="@style/utfylling_tekstboks"
            android:hint="@string/utfylling_tittel" />

        <Spinner
            android:id="@+id/utfylling_spinner"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/Kategorier"/>
        <EditText
            android:id="@+id/event_utfyll_sted"
            style="@style/utfylling_tekstboks"
            android:hint="@string/utfylling_sted" />
        <EditText
            android:id="@+id/event_utfyll_Beskrivelse"
            style="@style/utfylling_tekstboks"
            android:hint="@string/utfylling_beskrivelse"
            android:inputType="text|textMultiLine"
            android:minLines="4" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1" >
            <TextView
                android:id="@+id/event_utfyll_dato"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginRight="5dp"
                android:textSize="16dp"
                android:clickable="true"
                style="@style/utfylling_tekstboks"
                android:hint="@string/utfylling_dato"
                android:gravity="center"
                android:focusable="true" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/event_utfyll_klokke"
                android:textSize="16dp"
                style="@style/utfylling_tekstboks"
                android:gravity="center"
                android:hint="@string/utfylling_klokke" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_gravity="center">
            <Button
                android:id="@+id/lag_event_button"
                android:layout_marginTop="@dimen/page_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lag_Event"
                android:textSize="10dp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>

</ScrollView>