<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".fragments.hjem.EventFragment">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <ImageView
                    android:scaleType="fitXY"
                    android:id="@+id/frontBildebg"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="Bilde som viser arrangementet"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:tint="#9F000000"/>

            <ImageView
                android:id="@+id/frontBilde"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="Bilde som viser arrangementet"
                android:adjustViewBounds="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:background="#55000000">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/bilde_frame_event"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="5dp"
                        android:layout_marginTop="@dimen/page_margin" >

                        <ImageView
                            android:id="@+id/bilde_profil_event"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_baseline_account_circle_24" />

                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/brukernavn_event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_toEndOf="@id/bilde_frame"
                        />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dato_og_tid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="21.08.21" />

                    <TextView
                        android:id="@+id/klokkeSlett"
                        android:textColor="@color/black"
                        android:text=" klokken 15:00"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tittel"
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="En Tittel"
                    android:textColor="@color/black"/>


                <TextView
                    android:id="@+id/by"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nedre Bakkeveg 6" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/page_margin"
                    android:gravity="center">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="22dp"
                            android:layout_gravity="left|center"
                            android:src="@drawable/ic_baseline_group_24" />

                        <Button
                            android:id="@+id/button_se_andre_påmeldte"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginLeft="15dp"
                            android:text="@string/knapp_event_sePåmeldte" />

                    </FrameLayout>

                    <Button
                        android:id="@+id/button_bliMed"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/knapp_event_bliMed" />
                </LinearLayout>
                <TextView
                    android:id="@+id/tittelBeskrivelse"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Beskrivelse_Event"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/beskrivelse"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/page_margin"
                    android:text="Dette er en test teskst med sdasdasfhaf bkajh djakshd kjasd klasjd kasgdhaj khagsdh jkasdga hsdjkash dkjasdh ashdljks " />

                <TextView
                    android:id="@+id/event_kategori"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/page_margin"
                    android:textStyle="bold"
                    android:text="Kategori"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/page_margin"
                    android:background="@android:color/darker_gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" >

                    <androidx.cardview.widget.CardView
                        android:layout_marginLeft="5dp"
                        android:id="@+id/bilde_frame"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="5dp"
                        android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/kommentar_profil_bilde"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_account_circle_24"/>

                    </androidx.cardview.widget.CardView>
                    <EditText
                        android:id="@+id/kommentar_edit_tekst"
                        android:background="#ededed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:inputType="text|textMultiLine"
                        android:minLines="2"
                        android:layout_margin="@dimen/page_margin"
                        android:hint="@string/hint_kommentarFelt"
                        android:imeOptions="flagNoExtractUi"
                        android:maxWidth="200dp"/>
                </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center">

                        <Button
                            android:id="@+id/button_post_comment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:drawableEnd="@drawable/ic_baseline_send_24"
                            android:paddingStart="30dp"
                            android:paddingEnd="30dp"/>
                    </RelativeLayout>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_kommentar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>